# pvpgame

./: .gitignore  CMakeLists.txt  README.md
include/: Ability.h  AttackStrategy.h  Equipment.h  Player.h  Role.h
src/: Ability.cpp  AttackStrategy.cpp  Equipment.cpp  Player.cpp  Role.cpp
tests/: testAttackStrategy.cpp  testEquipment.cpp  testPlayer.cpp  testRole.cpp
